--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"cd api && npm run dev\" \"cd client && npm start\" "
+    "dev": "concurrently \"cd api && npm run dev\" \"cd client && npm start\" ",
+    "installation": "npm install && cd api && npm install && cd .. && cd client && npm install"
   },
   "keywords": [],
   "author": "",
